added javadoc comments